--- a/Michaelmas/2. Getting Started with R.ipynb
+++ b/Michaelmas/2. Getting Started with R.ipynb
@@ -2264,109 +2264,109 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>3471.63641379865</li>\n",
-       "\t<li>-1921.97935168583</li>\n",
-       "\t<li>-4844.33247050757</li>\n",
-       "\t<li>71.2458748873533</li>\n",
-       "\t<li>1756.27947335149</li>\n",
-       "\t<li>-270.477379678304</li>\n",
-       "\t<li>1709.33874466007</li>\n",
-       "\t<li>1041.01426217584</li>\n",
-       "\t<li>2375.25807681821</li>\n",
-       "\t<li>-106.667041171949</li>\n",
-       "\t<li>5891.32414979962</li>\n",
-       "\t<li>-3195.10600101676</li>\n",
-       "\t<li>-2924.30825446193</li>\n",
-       "\t<li>2286.45147038948</li>\n",
-       "\t<li>-1792.89219064246</li>\n",
-       "\t<li>1692.66189307</li>\n",
-       "\t<li>4517.17119043171</li>\n",
-       "\t<li>3579.57913424654</li>\n",
-       "\t<li>3957.48145422816</li>\n",
-       "\t<li>-2251.5235610576</li>\n",
-       "\t<li>-4238.27738514244</li>\n",
-       "\t<li>-4766.8848098414</li>\n",
-       "\t<li>-1044.99061180701</li>\n",
-       "\t<li>-3193.91567903444</li>\n",
-       "\t<li>848.085381670274</li>\n",
-       "\t<li>1232.85165427757</li>\n",
-       "\t<li>-4165.19077941876</li>\n",
-       "\t<li>-1999.14397399579</li>\n",
-       "\t<li>-3180.49679289751</li>\n",
+       "\t<li>2456.75183340699</li>\n",
+       "\t<li>-5300.7007560526</li>\n",
+       "\t<li>593.326401477294</li>\n",
+       "\t<li>614.118919807109</li>\n",
+       "\t<li>-3581.80967851826</li>\n",
+       "\t<li>-977.831341285733</li>\n",
+       "\t<li>1687.83549225573</li>\n",
+       "\t<li>1026.16811032519</li>\n",
+       "\t<li>1336.20859042736</li>\n",
+       "\t<li>-5336.15176653798</li>\n",
+       "\t<li>748.059139278359</li>\n",
+       "\t<li>-1689.19432425622</li>\n",
+       "\t<li>576.344824775299</li>\n",
+       "\t<li>544.234004049417</li>\n",
+       "\t<li>-5999.96670341832</li>\n",
+       "\t<li>4764.12552692113</li>\n",
+       "\t<li>-3287.3180852551</li>\n",
+       "\t<li>404.473949590897</li>\n",
+       "\t<li>1566.38466424086</li>\n",
+       "\t<li>-3919.02247062576</li>\n",
+       "\t<li>438.814607121474</li>\n",
+       "\t<li>362.612423906747</li>\n",
+       "\t<li>-325.744847566562</li>\n",
+       "\t<li>-1213.99803631624</li>\n",
+       "\t<li>-4359.38517051036</li>\n",
+       "\t<li>151.611695200612</li>\n",
+       "\t<li>599.57530285727</li>\n",
+       "\t<li>1923.43144598707</li>\n",
+       "\t<li>3016.97783925328</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 3471.63641379865\n",
-       "\\item -1921.97935168583\n",
-       "\\item -4844.33247050757\n",
-       "\\item 71.2458748873533\n",
-       "\\item 1756.27947335149\n",
-       "\\item -270.477379678304\n",
-       "\\item 1709.33874466007\n",
-       "\\item 1041.01426217584\n",
-       "\\item 2375.25807681821\n",
-       "\\item -106.667041171949\n",
-       "\\item 5891.32414979962\n",
-       "\\item -3195.10600101676\n",
-       "\\item -2924.30825446193\n",
-       "\\item 2286.45147038948\n",
-       "\\item -1792.89219064246\n",
-       "\\item 1692.66189307\n",
-       "\\item 4517.17119043171\n",
-       "\\item 3579.57913424654\n",
-       "\\item 3957.48145422816\n",
-       "\\item -2251.5235610576\n",
-       "\\item -4238.27738514244\n",
-       "\\item -4766.8848098414\n",
-       "\\item -1044.99061180701\n",
-       "\\item -3193.91567903444\n",
-       "\\item 848.085381670274\n",
-       "\\item 1232.85165427757\n",
-       "\\item -4165.19077941876\n",
-       "\\item -1999.14397399579\n",
-       "\\item -3180.49679289751\n",
+       "\\item 2456.75183340699\n",
+       "\\item -5300.7007560526\n",
+       "\\item 593.326401477294\n",
+       "\\item 614.118919807109\n",
+       "\\item -3581.80967851826\n",
+       "\\item -977.831341285733\n",
+       "\\item 1687.83549225573\n",
+       "\\item 1026.16811032519\n",
+       "\\item 1336.20859042736\n",
+       "\\item -5336.15176653798\n",
+       "\\item 748.059139278359\n",
+       "\\item -1689.19432425622\n",
+       "\\item 576.344824775299\n",
+       "\\item 544.234004049417\n",
+       "\\item -5999.96670341832\n",
+       "\\item 4764.12552692113\n",
+       "\\item -3287.3180852551\n",
+       "\\item 404.473949590897\n",
+       "\\item 1566.38466424086\n",
+       "\\item -3919.02247062576\n",
+       "\\item 438.814607121474\n",
+       "\\item 362.612423906747\n",
+       "\\item -325.744847566562\n",
+       "\\item -1213.99803631624\n",
+       "\\item -4359.38517051036\n",
+       "\\item 151.611695200612\n",
+       "\\item 599.57530285727\n",
+       "\\item 1923.43144598707\n",
+       "\\item 3016.97783925328\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 3471.63641379865\n",
-       "2. -1921.97935168583\n",
-       "3. -4844.33247050757\n",
-       "4. 71.2458748873533\n",
-       "5. 1756.27947335149\n",
-       "6. -270.477379678304\n",
-       "7. 1709.33874466007\n",
-       "8. 1041.01426217584\n",
-       "9. 2375.25807681821\n",
-       "10. -106.667041171949\n",
-       "11. 5891.32414979962\n",
-       "12. -3195.10600101676\n",
-       "13. -2924.30825446193\n",
-       "14. 2286.45147038948\n",
-       "15. -1792.89219064246\n",
-       "16. 1692.66189307\n",
-       "17. 4517.17119043171\n",
-       "18. 3579.57913424654\n",
-       "19. 3957.48145422816\n",
-       "20. -2251.5235610576\n",
-       "21. -4238.27738514244\n",
-       "22. -4766.8848098414\n",
-       "23. -1044.99061180701\n",
-       "24. -3193.91567903444\n",
-       "25. 848.085381670274\n",
-       "26. 1232.85165427757\n",
-       "27. -4165.19077941876\n",
-       "28. -1999.14397399579\n",
-       "29. -3180.49679289751\n",
+       "1. 2456.75183340699\n",
+       "2. -5300.7007560526\n",
+       "3. 593.326401477294\n",
+       "4. 614.118919807109\n",
+       "5. -3581.80967851826\n",
+       "6. -977.831341285733\n",
+       "7. 1687.83549225573\n",
+       "8. 1026.16811032519\n",
+       "9. 1336.20859042736\n",
+       "10. -5336.15176653798\n",
+       "11. 748.059139278359\n",
+       "12. -1689.19432425622\n",
+       "13. 576.344824775299\n",
+       "14. 544.234004049417\n",
+       "15. -5999.96670341832\n",
+       "16. 4764.12552692113\n",
+       "17. -3287.3180852551\n",
+       "18. 404.473949590897\n",
+       "19. 1566.38466424086\n",
+       "20. -3919.02247062576\n",
+       "21. 438.814607121474\n",
+       "22. 362.612423906747\n",
+       "23. -325.744847566562\n",
+       "24. -1213.99803631624\n",
+       "25. -4359.38517051036\n",
+       "26. 151.611695200612\n",
+       "27. 599.57530285727\n",
+       "28. 1923.43144598707\n",
+       "29. 3016.97783925328\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1]  3471.63641 -1921.97935 -4844.33247    71.24587  1756.27947  -270.47738\n",
-       " [7]  1709.33874  1041.01426  2375.25808  -106.66704  5891.32415 -3195.10600\n",
-       "[13] -2924.30825  2286.45147 -1792.89219  1692.66189  4517.17119  3579.57913\n",
-       "[19]  3957.48145 -2251.52356 -4238.27739 -4766.88481 -1044.99061 -3193.91568\n",
-       "[25]   848.08538  1232.85165 -4165.19078 -1999.14397 -3180.49679"
+       " [1]  2456.7518 -5300.7008   593.3264   614.1189 -3581.8097  -977.8313\n",
+       " [7]  1687.8355  1026.1681  1336.2086 -5336.1518   748.0591 -1689.1943\n",
+       "[13]   576.3448   544.2340 -5999.9667  4764.1255 -3287.3181   404.4739\n",
+       "[19]  1566.3847 -3919.0225   438.8146   362.6124  -325.7448 -1213.9980\n",
+       "[25] -4359.3852   151.6117   599.5753  1923.4314  3016.9778"
       ]
      },
      "metadata": {},
@@ -3420,7 +3420,7 @@
      "text": [
       "\n",
       "The downloaded binary packages are in\n",
-      "\t/var/folders/45/1l28_wqj4m7gwjtnrw1k7mgr0000gn/T//Rtmp1bYEdy/downloaded_packages\n"
+      "\t/var/folders/45/1l28_wqj4m7gwjtnrw1k7mgr0000gn/T//Rtmpfllx3p/downloaded_packages\n"
      ]
     }
    ],
@@ -3467,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3483,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3591,7 +3591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3749,7 +3749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4131,7 +4131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -4200,7 +4200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -4228,7 +4228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -4255,7 +4255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -4354,7 +4354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -4470,7 +4470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -4586,7 +4586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4605,7 +4605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -4638,7 +4638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4654,7 +4654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -4682,7 +4682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -4704,12 +4704,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try and repeat our graphs from before:"
+    "If we wish we could improve the quality we can, but only on saving images. We don't need to worry about that just yet.\n",
+    "\n",
+    "Instead let's try and repeat our graphs from before (note we will see next week how a `for loop` would be quite handy here):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
