--- a/Lent/3. Econometrics IIII.ipynb
+++ b/Lent/3. Econometrics IIII.ipynb
@@ -4,17 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Econometrics III\n",
+    "# Econometrics IIII\n",
     "\n",
-    "In Econometrics III we get to the juiciest part of metrics: causation. Don't be fooled by the number of topics, this is definitely one of the toughest weeks so far! In this notebook we'll cover:\n",
+    "We've reached our final lesson on econometrics and R! Just a style point - we've gone with IIII instead of IV to avoid confusion with IV regressions. To round out our metrics knowledge we say goodbye to our faithful friend the OLS regression and move onto some alternatives. The notebook proceeds as follows:\n",
     "\n",
-    "- <a href='#Selection Bias'>Selection Bias</a>\n",
-    "- <a href='#Difference-in-Differences'>Difference-in-Differences</a> \n",
-    "-   <a href='#Regression Discontinuity'>Regression Discontinuity</a>\n",
-    "-   <a href='#Instrumental Variables'>Instrumental Variables</a>\n",
-    "-  <a href='#Two-stage Least Squares'>Two-stage Least Squares</a>\n",
-    "-  <a href='#Regression Tables'>Regression Tables</a>\n",
-    "\n",
+    "- <a href='#Maximum Likelihood Estimation'>Maximum Likelihood Estimation</a>  \n",
+    "-   <a href='#Logit and Probit'>Logit and Probit</a>\n",
+    "-  <a href='#Generalised Method of Moments'>Generalised Method of Moments</a>\n",
+    "-   <a href='#Non-Linear Least Squares'>Non-Linear Least Squares</a>\n",
+    "-  <a href='#Lasso Regressions'>Lasso Regressions</a>\n",
+    "-  <a href='#Ridge Regressions'>Ridge Regressions</a>\n",
     "\n"
    ]
   },
@@ -22,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selection Bias <a id='Selection Bias'></a>"
+    "### Maximum Likelihood Estimation <a id='Maximum Likelihood Estimation'></a>"
    ]
   },
   {
@@ -43,29 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Difference-in-Differences<a id='Difference-in-Differences'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "   ### Regression Discontinuity <a id='Regression Discontinuity'></a>\n",
+    " ### Logit and Probit<a id='Logit and Probit'></a>\n",
     "\n"
    ]
   },
@@ -87,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  ### Instrumental Variables<a id='Instrumental Variables'></a>\n",
+    "   ### Generalised Method of Moments<a id='Generalised Method of Moments'></a>\n",
     "\n"
    ]
   },
@@ -109,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two-stage Least Squares<a id='Two-stage Least Squares'></a>\n",
+    "  ### Non-Linear Least Squares<a id='Non-Linear Least Squares'></a>\n",
     "\n"
    ]
   },
@@ -131,7 +108,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Regession Tables<a id='Regession Tables'></a>\n",
+    "### Lasso Regressions<a id='Lasso Regressions'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Ridge Regressions<a id='Ridge Regressions'></a>\n",
     "\n"
    ]
   },
