--- a/Lent/5. Machine Learning I.ipynb
+++ b/Lent/5. Machine Learning I.ipynb
@@ -4,64 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Econometrics I\n",
+    "# Machine Learning I\n",
     "\n",
-    "This notebook provides a brief overview of following introductory topics in econometrics. It aims to introduce the Linear Regression model:\n",
+    "Welcome to our first real taste of Machine Learning. It might seem frustrating that we're only going to spend two notebooks out of twelve on such an interesting topic but fear not - you've already done a bit of Machine Learning! Regression is a key part of machine learning and so you're already well on the way to learning more. In this week we'll focus on numerical data and in our final week we'll cover text-based data. This notebook covers:\n",
     "\n",
-    "- <a href='#The Bivariate Regression'>The Bivariate Regression</a>  <a id='The Bivariate Regression'></a>\n",
-    "-   <a href='#Ordinary Least Squares'>Ordinary Least Squares</a>\n",
-    "-   <a href='#Regression Coefficients'>Regression Coefficients</a>\n",
-    "-  <a href='#Significance of Coefficients'>Significance of Coefficients</a>\n",
-    "- <a href='#$R^2 and Adjusted-R^2'>R^2 and Adjusted-R^2</a>\n",
-    "-  <a href='#Hypothesis Testing'>Hypothesis Testing</a>\n",
-    "-  <a href='#Multivariate Regression'>Multivariate Regression</a>\n",
-    "-  <a href='#F-tests'>F-tests</a>\n",
-    "- <a href='#Interactions'>Interactions</a>\n",
-    "- <a href='#The Gauss Markov Theorem'>The Gauss Markov Theorem</a>\n",
+    "- <a href='#What is Machine Learning?'>What is Machine Learning?</a>  \n",
+    "-   <a href='#Exploratory Data Analysis'>Exploratory Data Analysis</a>\n",
+    "-   <a href='#Clustering'>Clustering</a>\n",
+    "-  <a href='#Dimensionality Reduction'>Dimensionality Reduction</a>\n",
+    "- <a href='#Classification'>Classification</a>\n",
+    "-  <a href='#K Nearest Neighbours'>K Nearest Neighbours</a>\n",
+    "-  <a href='#Support Vector Machines'>Support Vector Machines</a>\n",
+    "-  <a href='#Decision Trees'>Decision Trees</a>\n",
+    "- <a href='#Ensemble Methods'>Ensemble Methods</a>\n",
+    "- <a href='#Stacking Models'>Stacking Models</a>\n",
+    "- <a href='#Neural Networks'>Neural Networks</a>\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The Bivariate Regression <a id='The Bivariate Regression'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ### Ordinary Least Squares<a id='Ordinary Least Squares'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "   ### Regression Coefficients <a id='Regression Coefficients'></a>\n",
     "\n",
     "\n"
    ]
@@ -69,147 +27,247 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### What is Machine Learning? <a id='What is Machine Learning?'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  ### Significance of Coefficients<a id='Significance of Coefficients'></a>\n",
+    " ### Exploratory Data Analysis<a id='Exploratory Data Analysis'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   ### Clustering <a id='Clustering'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $R^2$ and Adjusted-$R^2$<a id='R^2 and Adjusted-R^2'></a>\n",
+    "  ### Dimensionality Reduction<a id='Dimensionality Reduction'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Hypothesis Testing<a id='Hypothesis Testing'></a>\n",
+    "### Classification<a id='Classification'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Multivariate Regression <a id='Multivariate Regression'></a>\n",
+    " ### K Nearest Neighbours<a id='K Nearest Neighbours'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### F-tests <a id='F-tests'></a>\n",
+    " ### Support Vector Machines <a id='Support Vector Machines'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  ### Interactions<a id='Interactions'></a>\n",
+    " ### Decision Trees <a id='Decision Trees'></a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  ### The Gauss Markov Theorem <a id='The Gauss Markov Theorem'></a>"
+    "  ### Ensemble Methods<a id='Ensemble Methods'></a>\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "  ### Stacking Models <a id='Stacking Models'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "  ### Neural Networks <a id='Neural Networks'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
