--- a/Lent/6. Machine Learning II.ipynb
+++ b/Lent/6. Machine Learning II.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Econometrics I\n",
+    "# Machine Learning II\n",
     "\n",
-    "This notebook provides a brief overview of following introductory topics in econometrics. It aims to introduce the Linear Regression model:\n",
+    "And so we reach the beginning of the end! Well done on getting as far as you have, it may feel like October is far away now but we really have covered a LOT of ground. Remember when loading a dataset into R felt like a huge achievement? Now you can create your own AI! It's not very good AI but still, credit where credit is due. As promised we dedicate our final notebook to applying machine learning to text-based problems. The notebook is structured as follows:\n",
     "\n",
-    "- <a href='#The Bivariate Regression'>The Bivariate Regression</a>  <a id='The Bivariate Regression'></a>\n",
+    "- <a href='#Natural Language Processing'>Natural Language Processing</a>  \n",
     "-   <a href='#Ordinary Least Squares'>Ordinary Least Squares</a>\n",
     "-   <a href='#Regression Coefficients'>Regression Coefficients</a>\n",
     "-  <a href='#Significance of Coefficients'>Significance of Coefficients</a>\n",
